:adhesive_bandage: fix tooltip cropped in grid mode

--- a/apps/front/src/assets/css/components/utils/_badge.scss
+++ b/apps/front/src/assets/css/components/utils/_badge.scss
@@ -60,7 +60,6 @@
   }
 
   &--dark-light {
-    position: relative;
     background: var(--dark-light-transparent);
 
     &:before {
