--- a/apps/front/src/assets/css/components/utils/_tooltip.scss
+++ b/apps/front/src/assets/css/components/utils/_tooltip.scss
@@ -2,6 +2,7 @@
   display: flex;
   gap: 5px;
   position: absolute;
+  z-index: 2;
   top: -12px;
   left: 50%;
   transform: translate(-50%, -100%);
